@@ -15,7 +15,7 @@ player-lost-rand-5=[color=36, 204, 210]__1__[/color] experienced kinetic energy!
 player-lost-rand-6=[color=36, 204, 210]__1__[/color] was killed by [Intentional Game Design]!
 player-lost-rand-7=[color=36, 204, 210]__1__[/color] blew up!
 player-lost-rand-8=[color=36, 204, 210]__1__[/color] has met a fiery end!
-player-lost-rand-9=[color=36, 204, 210]__1__[/color] is pushing up the daisies!
+player-lost-rand-9=[color=36, 204, 210]__1__[/color] is pushing up daisies!
 player-lost-rand-10=[color=36, 204, 210]__1__[/color] joined the great Worm in the sky!
 player-lost-rand-11=[color=36, 204, 210]__1__[/color] met their demise!
 player-lost-rand-12=[color=36, 204, 210]__1__[/color] is knocking on heaven's door!
