@@ -7,6 +7,7 @@ Date: ??.??.????
     - Removed hacky workaround after fix in basegame (100508).
   Bugfixes:
     - Rework mechanism not detecting player losing anymore due to wont-fix vanilla regression (102511).
+    - Fix crash when player joins lobby during active game.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 04. 11. 2021
